package src.Tuiles;

public enum Directions {
    UP,
    LEFT,
    DOWN,
    RIGHT
}
