package src.Tuiles;

public class Joyau extends Tuile {
    public boolean estEncercle() {
        return true;
    }
}
